Toggle bug fix for borders/background overlap (#3769)

--- a/src/sass/7-components/_buttons.toggle.scss
+++ b/src/sass/7-components/_buttons.toggle.scss
@@ -110,7 +110,6 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin-left: -1px;
 	min-height: $xui-input-height; // TODO: remove layout assumption
 	min-width: $xui-input-height; // TODO: remove layout assumption
 	position: relative; // For z-index
